--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,24 @@
-<h1>
-  {{title}}
-</h1>
+<md-sidenav-container class="app-container">
+  <md-sidenav #sidenav class="app-sidenav">
+    <md-nav-list>
+      <md-list-item>
+        <a href="/tasks">タスク</a>
+      </md-list-item>
+      <md-list-item>
+        <a href="/works">作業時間</a>
+      </md-list-item>
+      <md-list-item>
+        <a href="/settings">設定</a>
+      </md-list-item>
+    </md-nav-list>
+  </md-sidenav>
+  <main class="main-content">
+    <button md-button (click)="sidenav.open()">
+      メニュー
+    </button>
+    <h1>
+      {{title}}
+    </h1>
+    <app-task></app-task>
+  </main>
+</md-sidenav-container>
