--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,6 @@
-.app-container {
-  width: 500px;
-  height: 300px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+.app-toolbar {
+  height: 5vh;
 }
-
-/*.main-content {*/
-  /*display: flex;*/
-  /*height: 100%;*/
-  /*align-items: center;*/
-  /*justify-content: center;*/
-/*}*/
-
-.app-sidenav {
-  padding: 20px;
+.app-container {
+  height: 95vh;
 }
