--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<md-toolbar class="app-toolbar" color="primary">
+  <button md-button (click)="sidenav.open()">★</button>
+  <span>{{title}}</span>
+</md-toolbar>
 <md-sidenav-container class="app-container">
   <md-sidenav #sidenav class="app-sidenav">
     <md-nav-list>
@@ -13,12 +17,10 @@
     </md-nav-list>
   </md-sidenav>
   <main class="main-content">
-    <button md-button (click)="sidenav.open()">
-      メニュー
-    </button>
-    <h1>
-      {{title}}
-    </h1>
     <app-task></app-task>
   </main>
 </md-sidenav-container>
+
+
+
+
